# aicitychallenge1

./: .gitignore  Dockerfile  LICENSE  a.txt  cocos_to_yolo.py  de-fisheye.ipynb  detr.ipynb  docker-compose.yml  fisheye.yaml  main.ipynb  main.py  pyproject.toml  requirements.txt  video_inference.txt  yolo_inference.py
aicitychallenge1/yolov11n_fisheye_run13/: args.yaml  results.csv
aicitychallenge2/yolov11n_fisheye_run15/: args.yaml  results.csv
aicitychallenge3/yolov11n_fisheye_run1/: args.yaml  results.csv
scripts/: RCNNFishEye.ipynb  YoloFishEye.ipynb
